@@ -2,8 +2,9 @@ dsh (0.25.10-2) UNRELEASED; urgency=low
 
   * prepare new release.
   * debian/control: Add Vcs-Git entry.
+  * testsuite: check that large-scale cluster forking works properly
 
- -- Junichi Uekawa <dancer@debian.org>  Fri, 01 Aug 2008 13:31:30 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Sat, 02 Aug 2008 01:07:16 +0900
 
 dsh (0.25.10-1) unstable; urgency=low
 
