@@ -1,3 +1,11 @@
+2008-08-02  Junichi Uekawa  <dancer@debian.org>
+
+	* tests/sleepyshell.sh: a fake remote shell command that does
+	sleep and echo. Use it for debugging.
+
+	* tests/pipe-vs-redirect.sh: check that redirect and pipe output
+	will work.
+
 2008-02-02  Junichi Uekawa  <dancer@debian.org>
 
 	* test entry.
